--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start",
     "lint": "next lint",
     "postinstall": "prisma generate",
-    "seed": "node scripts/seed-matches.js"
+    "seed": "node scripts/seed-matches.js",
+    "migrate:dev": "npx dotenv-cli -e .env -- npx prisma db push --skip-generate",
+    "migrate:prod": "npx dotenv-cli -e .env.production -- npx prisma db push --skip-generate"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.4",
@@ -25,6 +27,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "dotenv-cli": "^10.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
     "tailwindcss": "^4",
