--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "15.3.3",
     "prisma": "^6.11.1",
     "react": "^19.0.0",
+    "react-country-flag": "^3.1.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
