--- a/.github/workflows/daily-update.yml
+++ b/.github/workflows/daily-update.yml
@@ -11,19 +11,14 @@ on:
 
 permissions:
   contents: write
-  pages: write
-  id-token: write
 
 concurrency:
   group: "daily-update"
   cancel-in-progress: false
 
 jobs:
-  update-and-deploy:
+  update-analytics:
     runs-on: ubuntu-latest
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
 
     steps:
       - name: Checkout repository
@@ -100,29 +95,20 @@ jobs:
               print('chartData pattern not found in index.html')
           "
 
-      - name: Commit and push changes
+      - name: Commit and push changes to main branch
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
+          cd public/analytics
           git add -A
-          git diff --staged --quiet || git commit -m "Daily update: $(date +'%Y-%m-%d %H:%M') UTC
+          cd ../..
+          git add public/analytics
+          git diff --staged --quiet || git commit -m "Daily analytics update: $(date +'%Y-%m-%d %H:%M') UTC
 
           - Exported fresh data from database
           - Regenerated all analysis files
           - Generated daily sports report
-          - Sent newsletter via Beehiiv
+          - Updated analytics files in public/analytics
 
-          [skip ci]"
-          git push
-
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
-
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: '.'
-
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+          Vercel will automatically deploy these changes."
+          git push origin main
